增加算法导论中归并排序的python实现

--- a/_posts/算法导论.md
+++ b/_posts/算法导论.md
@@ -189,6 +189,41 @@ if p < r
 
 归并排序算法python实现
 
+```python
+# 分
+def sort(A):
+    # 分
+    if len(A)<=1:
+        return A
+
+    middle = len(A)//2
+    left = sort(A[:middle])
+    right = sort(A[middle:])
+    # 治
+    return merge(left,right)
+
+# 治
+def merge(left,right):
+    c = []
+    h = j = 0
+    while j<len(left) and h<len(right):
+        if left[j]<right[h]:
+            c.append(left[j])
+            j+=1
+        else:
+            c.append(right[h])
+            h+=1
+
+    if j==len(left):
+        for i in right[h:]:
+            c.append(i)
+    if h==len(right):
+        for i in left[j:]:
+            c.append(i)
+
+    return c
+```
+
 
 
 ## 第3章 函数的增长
