feature：增加快速排序

--- a/_posts/算法导论.md
+++ b/_posts/算法导论.md
@@ -228,7 +228,103 @@ def merge(left,right):
 
 ## 第3章 函数的增长
 
+## 第7章 快速排序
 
+### 7.1 快速排序的描述
 
+```
+QUICKSOURT(A, p, r)
+	if p<r
+		q = PARTITION(A, p, r)
+		QUICKSOURT(A, p, q-1)
+		QUICKSOURT(A, q+1, r)
 
+PARTITION(A, p, r)
+	x = A[r]
+	i = p-1
+	for j=p to r-1
+		if A[j]<x
+			i = i+1
+			exchange A[i] with A[j]
+	exchange A[i+1] with A[r]
+
+```
+
+快速排序的python实现
+```python
+def quicksort(A, p, r):
+    if p < r:
+        q = partition(A, p, r)
+        quicksort(A, p, q-1)
+        quicksort(A, q+1, r)
+
+def partition(A, p, r):
+    x = A[r]
+    i = p-1
+    for j in range(p, r):
+        if A[j]<=x:
+            i += 1
+            A[i], A[j] = A[j], A[i] # 交换位置，将小于x的放到左边，i是划分的位置点
+    A[i+1], A[r] = A[r], A[i+1]  # 最后将主元x放到两个序列中间
+    return i+1
+```
+
+### 7.2 快速排序的性能
+
+1、最坏情况划分
+
+当每次划分的两个子问题分别含有n-1个元素和0个元素时，此时快速排序的时间复杂度为$O(n^2)$
+
+2、最好情况划分
+
+在最平衡划分时每个子问题的规模都不大于n/2，此时时间复杂度为$O(nlgn)$
+
+3、平衡的划分
+
+最一般的情况下，两个子问题都不是最坏的情况也不是最平衡时，时间复杂度同样为$O(nlgn)$
+
+### 7.3 快速排序的随机化版本
+
+在上面的快速排序中主元每次都是取A[r]，随机化的版本则是每次随机化的选取数组中的一个元素作为主元，这样会使得数组的划分更为均衡化。
+
+```
+RANDOMIZED-PARTITION(A, p, r)
+	i = RANDOM(p, r)
+	exchange A[r] with A[i]
+	return PARTITION(A, p, r)
+# 随机化的快速排序不在调用PARTITION,而是调用RANDOMIZED-PARTITION
+RANDOMIZED-QUICKSOURT(A, p, r)
+	if p<r
+		q = RANDOMIZED-PARTITION(A, p, r)
+		RANDOMIZED-QUICKSOURT(A, p, q-1)
+		RANDOMIZED-QUICKSOURT(A, q+1, r)
+```
+
+随机化的快速排序python实现
+
+```python
+import random
+
+def randomzed_quicksort(A, p, r):
+    if p < r:
+        q = randomzed_(A, p, r)
+        randomzed_quicksort(A, p, q-1)
+        randomzed_quicksort(A, q+1, r)
+        
+#随机化过程
+def randomzed_(A, p, r):
+    i = random.randint(p, r)
+    A[r],A[i] = A[i],A[r]
+    return partition(A, p, r)
+
+def partition(A, p, r):
+    x = A[r]
+    i = p-1
+    for j in range(p, r):
+        if A[j]<=x:
+            i += 1
+            A[i], A[j] = A[j], A[i]
+    A[i+1], A[r] = A[r], A[i+1]
+    return i+1
+```
 
